// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reduceViewState creates view state for empty block in between 1`] = `
Object {
  "blocks": Array [
    Object {
      "blockKey": "block-1",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [
        Object {
          "text": "One",
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "O",
        },
        Object {
          "char": "n",
        },
        Object {
          "char": "e",
        },
      ],
    },
    Object {
      "blockKey": "block-2",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [],
      "styles": Array [],
      "value": Array [],
    },
    Object {
      "blockKey": "block-3",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [
        Object {
          "text": "Two",
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "T",
        },
        Object {
          "char": "w",
        },
        Object {
          "char": "o",
        },
      ],
    },
  ],
  "entityMap": Object {},
}
`;

exports[`reduceViewState creates view state for nested blocks 1`] = `
Object {
  "blocks": Array [
    Object {
      "blockKey": "block-1",
      "blockLevel": 0,
      "blocks": Array [
        Object {
          "blockKey": "block-2",
          "blockLevel": 1,
          "blocks": Array [],
          "fragments": Array [
            Object {
              "text": "Two",
            },
          ],
          "styles": Array [],
          "value": Array [
            Object {
              "char": "T",
            },
            Object {
              "char": "w",
            },
            Object {
              "char": "o",
            },
          ],
        },
        Object {
          "blockKey": "block-3",
          "blockLevel": 1,
          "blocks": Array [],
          "fragments": Array [
            Object {
              "text": "Three",
            },
          ],
          "styles": Array [],
          "value": Array [
            Object {
              "char": "T",
            },
            Object {
              "char": "h",
            },
            Object {
              "char": "r",
            },
            Object {
              "char": "e",
            },
            Object {
              "char": "e",
            },
          ],
        },
      ],
      "fragments": Array [
        Object {
          "text": "One",
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "O",
        },
        Object {
          "char": "n",
        },
        Object {
          "char": "e",
        },
      ],
    },
    Object {
      "blockKey": "block-4",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [
        Object {
          "text": "Four",
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "F",
        },
        Object {
          "char": "o",
        },
        Object {
          "char": "u",
        },
        Object {
          "char": "r",
        },
      ],
    },
  ],
  "entityMap": Object {},
}
`;

exports[`reduceViewState creates view state with fragments in between block boundaries 1`] = `
Object {
  "blocks": Array [
    Object {
      "blockKey": "block-1",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [
        Object {
          "text": "Hi",
        },
        Object {
          "data": undefined,
          "fragments": Array [
            Object {
              "text": "Yo",
            },
          ],
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "H",
        },
        Object {
          "char": "i",
        },
        Object {
          "char": "Y",
        },
        Object {
          "char": "o",
        },
      ],
    },
    Object {
      "blockKey": "block-2",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [
        Object {
          "text": "Wh",
        },
        Object {
          "text": "o",
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "W",
        },
        Object {
          "char": "h",
        },
        Object {
          "char": "o",
        },
      ],
    },
  ],
  "entityMap": Object {},
}
`;

exports[`reduceViewState creates view state with nested fragments 1`] = `
Object {
  "blocks": Array [
    Object {
      "blockKey": "block-1",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [
        Object {
          "text": "O",
        },
        Object {
          "data": undefined,
          "fragments": Array [
            Object {
              "text": "n",
            },
            Object {
              "data": Object {
                "some": "a",
              },
              "fragments": Array [
                Object {
                  "text": "e ",
                },
              ],
            },
            Object {
              "text": "TWo",
            },
          ],
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "O",
        },
        Object {
          "char": "n",
        },
        Object {
          "char": "e",
        },
        Object {
          "char": " ",
        },
        Object {
          "char": "T",
        },
        Object {
          "char": "W",
        },
        Object {
          "char": "o",
        },
      ],
    },
  ],
  "entityMap": Object {},
}
`;

exports[`reduceViewState maintains block entities 1`] = `
Object {
  "blocks": Array [
    Object {
      "blockKey": "block-1",
      "blockLevel": 0,
      "blocks": Array [],
      "entity": Object {
        "b": 1,
        "c": 2,
      },
      "fragments": Array [
        Object {
          "text": "1",
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "1",
        },
      ],
    },
    Object {
      "blockKey": "block-2",
      "blockLevel": 0,
      "blocks": Array [],
      "entity": Object {
        "c": 3,
        "d": 4,
      },
      "fragments": Array [
        Object {
          "text": "2",
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "2",
        },
      ],
    },
  ],
  "entityMap": Object {
    "a": Object {
      "b": 1,
      "c": 2,
    },
    "b": Object {
      "c": 3,
      "d": 4,
    },
  },
}
`;
